# navlib.py

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: test_coordinates.py  test_filters.py
examples/example_data/: accel-0.csv  gyro-0.csv  rangerates-0.csv  ranges-0.csv  ref_att_euler.csv  ref_pos.csv  ref_vel.csv  svpos-0.csv  svvel-0.csv  time.csv
navlib/: constants.py
navlib/attitude/: dcm.py  euler.py  quaternion.py  skew.py  wrap.py
navlib/coordinates/: acceleration.py  angular_velocity.py  dcm.py  position.py  velocity.py
navlib/gnss/: atmosphere.py  kf_measurement.py  kf_position.py  least_squares.py  rcvr.py
navlib/gnss_ins/: kf_loosely.py  kf_tightly.py
navlib/gravity/: gravity.py  radii_of_curvature.py  rotations.py
navlib/ins/: imu.py  mechanization.py
navlib/plot/: geoplot.py
