[build-system]
requires = [
  "setuptools",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
  "navlib*"
]
exclude = [
  "examples*",
]

[project]
name = "navlib"
version = "0.0.1"
description = "GNSS navigation processor utility"
readme = "README.md"
authors = [
  {name="Daniel Sturdivant", email="sturdivant20@gmail.com"},
]
requires-python = ">= 3.10"
dependencies = [
  "numpy",
  "scipy",
  "numba",
  "pandas",
  "plotly", 
  "planar @ git+https://github.com/srush/planar",
]

[project.urls]
Repository = "https://github.com/sturdivant20/navsim.py"
